--- a/static/css/userinfostyle.css
+++ b/static/css/userinfostyle.css
@@ -11,7 +11,7 @@ body{
   position: absolute;
   top: 25%;
   left: 43%;
-  transform: translate(-50%.-50%);
+  transform: translate(-50%,-50%);
   height: 250px;
   width: 250px;
   background: white;
